static/styles/index.css
@font-face {
  font-family: "EnceladusReg";
  src: url("../EnceladusRegular-d9xyE.otf");
}
@font-face {
  font-family: "EnceladusBold";
  src: url("../fonts/EnceladusBold-7BrER.otf");
}
@font-face {
  font-family: "EnceladusDemiBold";
  src: url("../fonts/EnceladusDemibold-mL18a.otf");
}

@keyframes fadedowntitle{
  from{
    margin-top: -250px;
    opacity: 0;
  }
  to{
    opacity: 1;
  }
}

@keyframes fadedown{
  from{
    margin-top: -50px;
    opacity: 0;
  }
  to{
    opacity: 1;
  }
}

body {
  font-family: "EnceladusBold";
  height: 100%;
  width: 100%;
}

.top-image {
  position: relative;
  opacity: 0.6;
  height: 450px;
  margin: -10px 0 20px -10px;
  background-repeat: no-repeat;
  background-position-x: 35%;
  background-position-y: 44%;
  background-image: url("../images/ottawa-background.jpg");
}

.vertical-center {
  opacity: 0;
  margin-top: -200px;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  animation: fadedowntitle 1s ease-out forwards;
}

.vertical-center p,
.vertical-center i {
  margin: 0;
  font-family: "EnceladusBold";
}

.vertical-center p {
  font-size: 50px;
}

.vertical-center i {
  font-size: larger;
}

.intro {
  display: flex;
  flex-wrap: wrap;
}

.title{
  text-align: center;
  font-size: 20px;
  font-family: "EnceladusBold";
}

.intro div{
  width: 633px;
}

.languages, .interests, .self, .about-me, .present-work, .future-work, .past-work{
   opacity: 0;
   font-size: 25px;
}

.languages, .interests, .self{
  text-align: center;
}

.languages, .interests{ 
  animation: fadedown 1s ease-in 2s forwards;
}

.self{
  animation: fadedown 1s ease-in 1s forwards;
}

.about-me, .present-work, .future-work, .past-work{
  padding: 0 120px;
}

.about-me{
  animation: fadedown 1s ease-in 3s forwards;
}

.present-work{
  animation: fadedown 1s ease-in 4s forwards;
}

.present-work-block, .future-work-block{
  display: flex;
  gap: 10px;
}

.future-work{
  animation: fadedown 1s ease-in 5s forwards;
}

.past-work{
  animation: fadedown 1s ease-in 5s forwards;
}

